SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question_Group__c/CPQ_Playbook_Question_Group__c.object-meta.xml
<CustomObject>
    <description>Container for CPQ Playbook Questions</description>
    <label>CPQ Playbook Question Group</label>
    <nameField>
        <label>CPQ Playbook Question Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Question Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>