SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question_Group__c/fields/CPQ_Playbook__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook__c</fullName>
    <description>CPQ Playbook to which this question group belongs</description>
    <inlineHelpText>CPQ Playbook to which this question group belongs</inlineHelpText>
    <label>CPQ Playbook</label>
    <referenceTo>CPQ_Playbook__c</referenceTo>
    <relationshipLabel>CPQ Playbook Question Groups</relationshipLabel>
    <relationshipName>CPQ_Playbook_Question_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>