SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question_Group__c/fields/Default_Collapsed__c.field-meta.xml
<CustomField>
    <fullName>Default_Collapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the question group is collapsed or not when initially loading its playbook in CPQ</description>
    <inlineHelpText>Determines if the question group is collapsed or not when initially loading its playbook in CPQ</inlineHelpText>
    <label>Default Collapsed</label>
    <type>Checkbox</type>
</CustomField>