SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Question_Group__c/fields/IsHidden__c.field-meta.xml
<CustomField>
    <fullName>IsHidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the user can see this group in CPQ. If not, the group is not enforced</description>
    <inlineHelpText>Determines if Users can see this group in CPQ. If not, the group is not enforced</inlineHelpText>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>